--- a/app/assets/less/tiles/main.less
+++ b/app/assets/less/tiles/main.less
@@ -1,30 +1,34 @@
 .flex() {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
+  display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
+  display: -moz-box; /* OLD - Firefox 19- (buggy but mostly works) */
+  display: -ms-flexbox; /* TWEENER - IE 10 */
   display: -webkit-flex;
-  display: -o-flex;
   display: flex;
+  -webkit-box-align: center;
+  -webkit-flex-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
   -webkit-flex-flow: row wrap;
   -o-flex-flow: row wrap;
   -moz-flex-flow: row wrap;
   flex-flow: row wrap;
+  -webkit-justify-content: center;
   justify-content: center;
-  //flex-wrap: wrap;
+  flex-wrap: wrap;
 }
 
 div.tiles {
   position: relative;
   width: 100%;
   height: 100%;
-//  overflow-x: hidden;
-//  overflow-y: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
   .flex();
   div.tile-item {
     .flex();
     -webkit-flex-direction: column; 
     flex-direction: column; 
-    transition-duration: 0.3s;
     border: 4px solid;
     padding: 6px;
     margin: auto;
@@ -115,12 +119,12 @@ div.tiles {
       right: 0;
       overflow-y: auto;
       -webkit-transform: scale(0);
-      transform: scale(0);
       -moz-transform: scale(0);
+      transform: scale(0);
       &.animate {
-        -webkit-transform: scale(1);
-        transform: scale(1);
+        -webkit-transform: scale(1); 
         -moz-transform: scale(1);
+        transform: scale(1);
       }
     }
   }
